Fix landing page styling where log in button is cut off

--- a/src/Components/LandingPage/LandingPage.css
+++ b/src/Components/LandingPage/LandingPage.css
@@ -4,7 +4,7 @@
   	background-image: url(/background.png);
   	background-repeat: no-repeat;
 	background-size: cover;
-	overflow: hidden;
+	overflow: scroll;
 }
 
 .topnav{
@@ -27,12 +27,15 @@
 }
 
 .contents{
-	height: 800px;
+	height: calc(100% - 220px);
+	min-height: 300px;
 	font-family: Circular, Helvetica, Arial, sans-serif;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	text-align: center;
+	margin-top: 80px;
+	margin-bottom: 40px;
 }
 
 .contents h1{
@@ -51,6 +54,7 @@
 .contents button{
 	background-color: rgb(30, 215, 96);
 	align-self: center;
+	min-height: 50px;
 	height:50px;
     width:200px;
     border-top-left-radius: 500px;
